err/restflow.err
Listing '.'...
Listing './bin'...
Compiling './bin/run_restflow.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/restflow'...
Compiling './lib/python3.5/site-packages/restflow/client.py'...
***   File "./lib/python3.5/site-packages/restflow/client.py", line 53
    print resp.url
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/restflow/hf3binding.py'...
***   File "./lib/python3.5/site-packages/restflow/hf3binding.py", line 175
    print proc.returncode
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/restflow/hf3lint.py'...
***   File "./lib/python3.5/site-packages/restflow/hf3lint.py", line 422
    print _FORMAT.format(
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/restflow/vtkfunctions.py'...
***   File "./lib/python3.5/site-packages/restflow/vtkfunctions.py", line 28
    print "No VTK Module"
                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/restflow-0.8b0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
